objects/Pay_Rule__c/Pay_Rule__c.object-meta.xml
<CustomObject>
    <label>Pay Rule</label>
    <nameField>
        <label>Pay Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pay Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>