objects/Pay_Rule__c/fields/Double_Time_Pay_Rate_Multiple__c.field-meta.xml
<CustomField>
    <fullName>Double_Time_Pay_Rate_Multiple__c</fullName>
    <label>Double Time Pay Rate Multiple</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>