objects/Pay_Rule__c/fields/Enable_Dispatch_from_Home_Pay__c.field-meta.xml
<CustomField>
    <fullName>Enable_Dispatch_from_Home_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Dispatch from Home Pay</label>
    <type>Checkbox</type>
</CustomField>