objects/Pay_Rule__c/fields/Holiday_Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Pay_Code__c</fullName>
    <label>Holiday Pay Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time_Rate_Code</valueSetName>
    </valueSet>
</CustomField>