objects/Pay_Rule__c/fields/Holiday_Rate_Multiple__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Rate_Multiple__c</fullName>
    <label>Holiday Rate Multiple</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>