objects/Pay_Rule__c/fields/OT_Pay_Rate_Multiple__c.field-meta.xml
<CustomField>
    <fullName>OT_Pay_Rate_Multiple__c</fullName>
    <label>OT Pay Rate Multiple</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>