objects/Pay_Rule__c/fields/OT_Rules__c.field-meta.xml
<CustomField>
    <fullName>OT_Rules__c</fullName>
    <label>OT Calculation Rules</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Over 8 hrs Per Day</fullName>
                <default>true</default>
                <label>Over 8 hrs Per Day</label>
            </value>
            <value>
                <fullName>Over 40 hrs Per Week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>