objects/Pay_Rule__c/fields/Pay_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Pay_Holiday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pay Holiday?</label>
    <type>Checkbox</type>
</CustomField>