objects/Pay_Rule__c/fields/Pay_Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>Pay_Travel_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pay Travel Time?</label>
    <type>Checkbox</type>
</CustomField>