objects/Pay_Rule__c/fields/Saturday_Rate_Multiple__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Rate_Multiple__c</fullName>
    <label>Saturday Rate Multiple</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>