objects/Pay_Rule__c/fields/Sunday_Rate_Multiple__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Rate_Multiple__c</fullName>
    <label>Sunday Rate Multiple</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>