objects/Pay_Rule__c/fields/Travel_Time_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>Travel_Time_Pay_Rate__c</fullName>
    <label>Travel Time Pay Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>