objects/Pay_Rule__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Union</fullName>
            </value>
            <value>
                <fullName>Prevailing Wage</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>