objects/Pay_Rule__c/fields/Use_Pay_Rule_Line_Detail_for_Hour_Calc__c.field-meta.xml
<CustomField>
    <fullName>Use_Pay_Rule_Line_Detail_for_Hour_Calc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Pay Rule Line Detail for Hour Calc.</label>
    <type>Checkbox</type>
</CustomField>