objects/Pay_Rule__c/fields/Work_Before_or_After_Holiday_to_Qualify__c.field-meta.xml
<CustomField>
    <fullName>Work_Before_or_After_Holiday_to_Qualify__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Work Before or After Holiday to Qualify</label>
    <type>Checkbox</type>
</CustomField>