objects/Pay_Rule__c/fields/Work_x_Out_y_Days_to_Qualify__c.field-meta.xml
<CustomField>
    <fullName>Work_x_Out_y_Days_to_Qualify__c</fullName>
    <label>Work x Out y Days to Qualify</label>
    <length>10</length>
    <type>Text</type>
</CustomField>