objects/Pay_Rule__c/listViews/MD_Pay_Rules.listView-meta.xml
<ListView>
    <fullName>MD_Pay_Rules</fullName>
    <columns>NAME</columns>
    <columns>Pay_Holiday__c</columns>
    <columns>Pay_Travel_Time__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>PW-MD</value>
    </filters>
    <label>MD Pay Rules</label>
</ListView>