objects/Pay_Rule__c/listViews/NYS_Pay_Rules.listView-meta.xml
<ListView>
    <fullName>NYS_Pay_Rules</fullName>
    <columns>NAME</columns>
    <columns>Pay_Holiday__c</columns>
    <columns>Pay_Travel_Time__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>PW-NYS,PW-NYC H2O</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>10/2/2019 12:00 AM</value>
    </filters>
    <label>NYS Pay Rules</label>
</ListView>